# Financial-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  branch-protection.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily-screener.yml  performance-report.yml  portfolio-review.yml  setup-branch-protection.yml  setup-rulesets.yml  trading-agent.yml  watchlist-review.yml
docs/: architecture.md  configuration.md  risk-management.md
src/financial_agent/: __init__.py  config.py  main.py  performance_main.py  review_main.py  screener_main.py  watchlist_main.py
src/financial_agent/analysis/: __init__.py  ai_analyzer.py
src/financial_agent/broker/: __init__.py  alpaca_client.py
src/financial_agent/data/: __init__.py  crypto_market.py  earnings.py  fundamentals.py  macro.py  models.py  news.py  sector_map.py
src/financial_agent/performance/: __init__.py  benchmarking.py
src/financial_agent/persistence/: __init__.py  equity_tracker.py  thesis_store.py
src/financial_agent/portfolio/: __init__.py  models.py
src/financial_agent/utils/: io.py  (+1 more)
tests/unit/: test_ai_analyzer.py  test_broker.py  test_data_models.py  test_drawdown.py  test_enhanced_engine.py  test_enhanced_technical.py  test_equity_tracker.py  test_models.py  test_performance_tracker.py  test_portfolio_reviewer.py  test_review_main.py  test_sector_map.py  test_strategy_engine.py  test_thesis_store.py  test_volatility_sizer.py  test_watchlist_main.py  test_watchlist_reviewer.py
(+10 files in other folders)
