[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-agent"
version = "0.1.0"
description = "AI-powered stock portfolio analyzer and trading agent"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.21.0",
    "anthropic>=0.40.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pytz>=2024.1",
    "ta>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
]

[project.scripts]
financial-agent = "financial_agent.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
